test: Заменить `new Integer(0)` на `Integer.valueOf(0)`